# TinySoundFont

./: .gitignore  CMakeLists.txt  CustomSoundFont.html  LICENSE  Makefile  README.md  WebMIDIPlayer-vs.sln  WebMIDIPlayer-vs.vcxproj  WebMIDIPlayer.rc  assets.mk  index.html  main.cpp  tml.h  tsf.h
.github/: pull_request_template.md
Data/: SYNTHGMS.SFO
Debug-wasm/: .gitignore  WebMIDIPlayer.html
Release-wasm/: WebMIDIPlayer.html
examples/: .gitignore  build-linux-clang.sh  build-linux-gcc.sh  build-osx.sh  example1.c  example1.dsp  example1.vcxproj  example2.c  example2.dsp  example2.vcxproj  example3.c  example3.dsp  example3.vcxproj  examples.sln  miniaudio_io.h  minisdl_audio.h
sfotool/: .gitignore  Makefile  README.md  main.c  sfotool.sln  sfotool.vcxproj
